quarto Basics book: improving structure

--- a/docs/basic/Programming_Basics/_quarto.yml
+++ b/docs/basic/Programming_Basics/_quarto.yml
@@ -12,9 +12,10 @@ book:
       chapters:
         - ../../process/visualstudiocode.qmd
         - ../../process/visualstudio.qmd
+        - ../../process/helloworld.qmd
+        - ../debugger/Debugger.qmd
     - part: ../partProgrammingConcepts.qmd
       chapters:
-        - ../debugger/Debugger.qmd
         - ../var/naslag_Variable.qmd
         - ../var/naslag_Operatoren.qmd
         - ../conditioneel/naslag_Keuzestructuren.qmd
